# rust_cnc_web

./: .gitignore  ideas.txt  pnpm-lock.yaml  pnpm-workspace.yaml
client_side/gcode-viewer/: package.json  tsconfig.json
client_side/gcode-viewer/src/: Canvas.tsx  SayHello.tsx  Viewer.tsx
client_side/react-frontend/: .eslintrc.cjs  =6.0.0  build_pi.sh  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
client_side/react-frontend/src/: App.tsx  Canvas.tsx  ControlPage.tsx  DebugPage.tsx  Editor.tsx  ErrorState.tsx  FileList.tsx  HomePage.tsx  Layout.tsx  ResultList.tsx  TaskBar.tsx  ViewPage.tsx  futureResult.ts  main.tsx
client_side/web/: Cargo.toml  build_pi.sh  index.html
client_side/web/src/: components.rs  coords_page.rs  display_page.rs  gcode_job_page.rs  main.rs  models.rs  render.rs  request.rs  status_header.rs  utils.rs
client_side/web/src/components/: folder_create_modal.rs  modal_wrapper.rs  upload_modal.rs
client_side/web/src/mdc/: icon_button.rs
client_side/web/src/models/: offsets.rs  positions.rs
client_side/web/src/utils/: async_sycamore.rs  time.rs
common/src/: api.rs  generic.rs  grbl.rs  lib.rs
gcode_generator/: Cargo.toml  inlay_autumn_background_very_coarse_path.nc  inlay_autumn_canopy_coarse_path.nc  inlay_autumn_canopy_fine_path.nc  inlay_autumn_canopy_very_coarse_path.nc  inlay_autumn_leaf_very_coarse_path.nc  inlay_autumn_trunk_coarse_path.nc  inlay_autumn_trunk_fine_path.nc  inlay_autumn_trunk_very_coarse_path.nc  inlay_autumn_wind_down_outer_coarse_path.nc  inlay_autumn_wind_down_outer_fine_path.nc  inlay_autumn_wind_tail_coarse_path.nc  inlay_autumn_wind_tail_very_coarse_path.nc  inlay_autumn_wind_top_inner_fine_path.nc  inlay_autumn_wind_top_inner_very_coarse_path.nc  inlay_autumn_wind_up_outer_fine_path.nc  inlay_autumn_wind_up_outer_very_coarse_path.nc  inlay_flower_background_coarse_path.nc  inlay_flower_foreground_coarse_path.nc  inlay_flower_foreground_fine_path.nc  inlay_sun_background_fine_path.nc  inlay_sun_foreground_very_coarse_path.nc  show_wkt.py
gcode_generator/src/: collection.rs  debug_show.rs  gcode.rs  lines.rs  main.rs  multitool_path.rs  onion.rs  region_to_spiral_path.rs  smooth_region.rs  spiral_path.rs
generation_utilities/wkt_utility/: eighth_inch_cut_0.nc  eighth_inch_cut_1_rounded.nc  fourtieth_inch_cut_0_rounded.nc  fourtieth_inch_cut_1.nc  gcode_generator.py  main.py
machine_mock/: Cargo.toml
machine_mock/src/: lib.rs  socat_port.rs
misc/src/: rc_hash_map.rs
miscellaneous/gcode_generator/: Cargo.toml  inlay_autumn_background_coarse_path.nc  inlay_autumn_background_fine_path.nc  inlay_autumn_leaf_coarse_path.nc  inlay_autumn_leaf_fine_path.nc  inlay_autumn_wind_down_outer_very_coarse_path.nc  inlay_autumn_wind_main_inner_coarse_path.nc  inlay_autumn_wind_main_inner_fine_path.nc  inlay_autumn_wind_main_inner_very_coarse_path.nc  inlay_autumn_wind_tail_fine_path.nc  inlay_autumn_wind_top_inner_coarse_path.nc  inlay_autumn_wind_up_outer_coarse_path.nc  inlay_flower_background_fine_path.nc  inlay_flower_both_fine_path.nc  inlay_sun_background_coarse_path.nc  inlay_sun_foreground_coarse_path.nc  inlay_sun_foreground_fine_path.nc
miscellaneous/gcode_generator/src/: collection.rs  comparable_float.rs  gcode.rs  main.rs  smooth_region.rs  spiral_path.rs
miscellaneous/generation_utilities/wkt_utility/: main.py
miscellaneous/misc/src/: lib.rs
miscellaneous/svg2wkt/: practice_plain.json
miscellaneous/svg2wkt/src/: main.rs
miscellaneous/test_app/client/: Cargo.toml
miscellaneous/test_app/protocol_types/: Cargo.toml
miscellaneous/test_app/server/: Cargo.toml
protocol_util/: Cargo.toml
protocol_util/src/: base.rs  generic.rs  lib.rs  types.rs
protocol_util_macros/src/: input.rs  output.rs
server/: Cargo.toml  build_pi.sh  kill_pi.sh
server/.cargo/: config
server/src/: cnc.rs  main.rs  oneway_websocket.rs  util.rs
server/src/cnc/: broker.rs  connection.rs  gcode.rs  grbl.rs  machine_writer.rs  stream_job.rs
server/src/cnc/gcode/: display.rs  geometry.rs  parser.rs
server/src/cnc/gcode/test_data/: front_face.nc
server/src/cnc/grbl/: handler.rs  machine.rs  messages.rs  new_machine.rs  parser.rs  realtime.rs  standard_handler.rs
server/src/util/: fixed_rb.rs  format_bytes.rs  future_or_pending.rs  historical_broadcast.rs  history_broadcast.rs  local_generation_counter.rs
server_client_shared/common/: Cargo.toml
server_client_shared/common/src/: api.rs  grbl.rs  lib.rs  websocket.rs
server_client_shared/protocol_util_macros/: Cargo.toml
server_side/local_runner/: Cargo.toml
server_side/server/: Cargo.toml  kill_pi.sh  logs_pi.sh  server.service
server_side/server/src/: cnc.rs  coordinates.rs  main.rs  paths.rs  server_result.rs  util.rs
server_side/server/src/cnc/: connection.rs  gcode.rs  grbl.rs  stream_job.rs
server_side/server/src/cnc/gcode/: display.rs  geometry.rs  parser.rs
server_side/server/src/cnc/gcode/test_data/: disk_job.nc  go_home.nc
server_side/server/src/cnc/grbl/: handler.rs  messages.rs  new_machine.rs  parser.rs  standard_handler.rs
server_side/server/src/util/: exclusive_extension.rs  file_backed_json.rs  future_or_pending.rs
svg2wkt/: Cargo.toml  output.json
svg2wkt/src/: main.rs  svg_parser.rs
test_app/client/: Cargo.toml
test_app/protocol_types/: Cargo.toml
test_app/protocol_types/src/: lib.rs
test_app/server/: Cargo.toml
util/gcode/: Cargo.toml
util/gcode-cli/: Cargo.toml  test_reflect.nc
util/gcode-cli/src/: main.rs
util/gcode-playground/: Cargo.toml
util/view-gcode/: package.json  pnpm-lock.yaml
util/watch_exec/: Cargo.toml
util/watch_exec/src/: main.rs
web/: Cargo.toml  build_pi.sh  convert.html  index.html  nginx_server.conf
web/js/: ripple.js  text_field.js
web/src/: coordinate_page.rs  debug_page.rs  display_page.rs  gcode_job_page.rs  jog_page.rs  main.rs  mdc.rs  render.rs  request.rs  status_header.rs
web/src/mdc/: circular_progress.js  circular_progress.rs  icon_button.js  ripple.js  ripple.rs
web/src/utils/: async_sycamore.rs
web/util/: html_to_view.py
(+47 files in other folders)
