[package]
name = "machine_mock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
tempdir = { version = "0.3.7", optional = true }
tokio = { version = "1", features = ["full"] }
tokio-serial = { version = "5.4", optional = true }
notify = { version = "5.1.0", default-features = false, features = ["macos_kqueue"], optional = true }

[dev-dependencies]

[features]
default = ["socat"]
socat = ["dep:tokio-serial", "dep:tempdir", "dep:notify"]
