[package]
name = "axum_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5", features = ["ws"] }
async-stream = "0.3.3"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.3", features = ["cors"] }
futures = "0.3"
tokio-stream = "0.1"
tokio-serial = "5.4"
ndarray = "0.15"
nom = "7.1"
hyper = "0.14"
itertools = "0.10"
pin-project = "1.0"