[package]
name = "svg2wkt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roxmltree = "0.16"
nom = "7.1"
itertools = "0.10"
clap = { version = "4.0.29", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
