[package]
name = "sycamore-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = "0.8"
reqwasm = "0.5"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
log = "0.4"
futures = "0.3"
wasm-logger = "0.2"
web-sys = "0.3"