[package]
name = "sycamore-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = {version="0.8", features=["suspense"]}
sycamore-router = "0.8"
reqwasm = "0.5"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
log = "0.4"
futures = "0.3"
wasm-logger = "0.2"
web-sys = {version="0.3", features=[
    "File",
    "FileList",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "MouseEvent",
    "WebGlBuffer",
    "WebGlVertexArrayObject",
    "WebGl2RenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlUniformLocation",
    "Window",
    "WheelEvent",
]}
stylist = "0.12"
console_error_panic_hook = "0.1"
gloo-timers = {version="0.2", features=["futures"]}
common = { path = "../../server_client_shared/common", features = ["wasmbind"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
js-sys = "0.3.60"
quaternion-core = "0.3"
itertools = "0.10"
chrono = { version = "0.4.24", features = ["serde", "wasmbind"] }
anyhow = "1.0.71"
