[package]
name = "axum_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.3", features = ["cors", "catch-panic", "trace"] }
futures = "0.3"
tokio-stream = "0.1"
tokio-serial = "5.4"
ndarray = "0.15"
nom = "7.1"
hyper = "0.14"
itertools = "0.10"
pin-project = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
serde_json = "1.0"
common = { path = "../../server_client_shared/common" }
ringbuf = "0.3"
clap = { version = "4.2.7", features = ["derive"] }
async-stream = "0.3.5"
anyhow = "1.0.71"
tracing-subscriber = { version = "0.3.17" }
