[package]
name = "axum_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["ws", "multipart", "macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.3", features = ["cors", "catch-panic", "trace"] }
tower-layer = { version = "0.3" }
futures = "0.3"
tokio-stream = "0.1"
tokio-serial = "5.4"
ndarray = { version = "0.15", features = ["serde"] }
nom = "7.1"
hyper = "0.14"
itertools = "0.10"
pin-project = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
common = { path = "../../server_client_shared/common" }
ringbuf = "0.3"
clap = { version = "4.2.7", features = ["derive"] }
async-stream = "0.3.5"
anyhow = { version = "1.0.71", features = ["backtrace"] }
tracing-subscriber = { version = "0.3.17" }
system_shutdown = "4.0.1"
tokio-util = { version = "0.7.8", features = ["io"] }
tempdir = "0.3.7"
